<?xml version="1.0"?>
<package format="2">
  <name>rr_awsdeepracer</name>
  <version>0.0.1</version>
  <description>A package to bridge the ROS-based control interface for the AWS DeepRacer robot to a Robot Raconteur middleware service</description>

  <maintainer email="johnwparent@gmail.com">John WP</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/johnwparent/rr_awsdeepracer</url>
  <author email="johnwparent@gmail.com">John WP</author> 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ctrl_pkg</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>RobotRaconteur</build_depend>


  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ctrl_pkg</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>RobotRaconteur</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>